2008-11-28  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/idle-dialog.c (show_idle_dialog): mark the idle dialog as
       visible before stopping the project timer so we don't start the no
       project timeout timer when it's not needed.


2008-11-27  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/timer.c (start_no_project_timer): Fixed the condition in which
	the "No project" timer is started.

2008-11-25  Goedson Teixeira Paixao  <goedson@debian.org>

	* glade/prefs.glade: Fixed tooltip for the "No Project Timeout" option.

2008-03-21  Goedson Teixeira Paixao  <goedson@debian.org>

	* configure.in, po/LINGUAS: use po/LINGUAS to list the available
	translations.

2008-03-10  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/projects-tree.c (gtt_projects_tree_init): Fixed display of
	the description column (Fixes #1911087)

2008-02-27  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/menucmd.c (about_box): Use GtkAboutDialog instead of the
	deprecated GnomeAbout.

	* doc/C/man/gnotime.1: Fixed the manpage's text

	* src/notes-area.c: include menus.h for prototype of the
	menus_get_popup function.

2008-02-15  Goedson Teixeira Paixao  <goedson@debian.org>

	* configure.in: Changed version to 2.3.0

	* NEWS: Prepare announcement of 2.3.0 release

	* configure.in: Check that guile version is >= 1.8

	* src/ghtml.c: Added functions that make use of the billing block
	(Patch #1872426)

2008-02-14  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/notes-area.c (projects_tree_clicked): Added callback
	function for displaying the context menu when user right clicks on
	projects tree.
	(notes_area_add_projects_tree): Connect projects tree to the right
	click callback function.

2008-02-13  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/Makefile.am: Made changes according to changes in
	configure.in.

	* configure.in:
	  - Separately check for glib, GTK+, libgnome and libgnomeui
	  - Fix check for libgconf